--- a/app.css
+++ b/app.css
@@ -926,10 +926,6 @@ html{
         .time-container{
             width: 120px;
         }
-
-        .others , #walking-video, .savethedate-container{
-            min-height: auto;
-        }
     }
 @media (max-width: 640px) {
         .main-image{
@@ -1091,6 +1087,9 @@ html{
 .h-full {
   height: 100%;
 }
+.h-screen {
+  height: 100vh;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1117,6 +1116,16 @@ html{
 }
 .max-w-6xl {
   max-width: 72rem;
+}
+@keyframes ping {
+
+  75%, 100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+.animate-ping {
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -1539,6 +1548,11 @@ html{
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
