--- a/app.css
+++ b/app.css
@@ -690,6 +690,7 @@ html{
         -o-object-position: center;
            object-position: center;
         opacity: 0.75;
+        text-shadow: 0 0 black;
 }
 .time-container{
         visibility: visible;
@@ -761,7 +762,7 @@ html{
         }
     }
 .en-title {
-  font-weight: 700;
+  font-weight: 500;
   --tw-text-opacity: 1;
   color: rgb(246 161 146 / var(--tw-text-opacity));
         text-shadow: 0 0 black;
@@ -772,7 +773,7 @@ html{
         margin-bottom: 1.25rem;
         font-size: 1.25rem;
         line-height: 1.75rem;
-        font-weight: 700;
+        font-weight: 500;
         --tw-text-opacity: 1;
         color: rgb(246 161 146 / var(--tw-text-opacity));
         text-shadow: 0 0 black;
@@ -1001,9 +1002,6 @@ html{
 }
 .col-span-2 {
   grid-column: span 2 / span 2;
-}
-.m-0 {
-  margin: 0px;
 }
 .mx-2 {
   margin-left: 0.5rem;
@@ -1317,7 +1315,6 @@ html{
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-
 @media (min-width: 768px) {
     
     .md\:duration-2{
@@ -1327,7 +1324,6 @@ html{
         animation-duration: 3s !important;
     }
 }
-
 @media (min-width: 1024px) {
     .lg\:fade-left.active {
         animation: fade-left 1s ease-in;
@@ -1336,7 +1332,6 @@ html{
         animation: fade-right 1s ease-in;
     }
 }
-
 @media (prefers-color-scheme: dark) {
 
   .dark\:border-gray-700 {
@@ -1369,7 +1364,6 @@ html{
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 }
-
 @media (min-width: 424px) {
 
   .xs\:mx-5 {
@@ -1386,7 +1380,6 @@ html{
          column-gap: 5rem;
   }
 }
-
 @media (min-width: 640px) {
 
   .sm\:mx-10 {
@@ -1475,7 +1468,6 @@ html{
     line-height: 1.75rem;
   }
 }
-
 @media (min-width: 768px) {
 
   .md\:mr-5 {
@@ -1515,7 +1507,6 @@ html{
     padding-top: 6rem;
   }
 }
-
 @media (min-width: 1024px) {
 
   .lg\:mx-20 {
@@ -1555,7 +1546,6 @@ html{
     line-height: 2.5rem;
   }
 }
-
 @media (min-width: 1280px) {
 
   .xl\:px-36 {
