--- a/app.css
+++ b/app.css
@@ -1058,6 +1058,9 @@ html{
 .mt-8 {
   margin-top: 2rem;
 }
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
 .block {
   display: block;
 }
@@ -1124,6 +1127,9 @@ html{
 }
 .animate-ping {
   animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+.cursor-pointer {
+  cursor: pointer;
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -1315,6 +1321,7 @@ html{
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
 @media (min-width: 768px) {
     
     .md\:duration-2{
@@ -1324,6 +1331,7 @@ html{
         animation-duration: 3s !important;
     }
 }
+
 @media (min-width: 1024px) {
     .lg\:fade-left.active {
         animation: fade-left 1s ease-in;
@@ -1332,6 +1340,7 @@ html{
         animation: fade-right 1s ease-in;
     }
 }
+
 @media (prefers-color-scheme: dark) {
 
   .dark\:border-gray-700 {
@@ -1364,6 +1373,7 @@ html{
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 }
+
 @media (min-width: 424px) {
 
   .xs\:mx-5 {
@@ -1380,6 +1390,7 @@ html{
          column-gap: 5rem;
   }
 }
+
 @media (min-width: 640px) {
 
   .sm\:mx-10 {
@@ -1468,6 +1479,7 @@ html{
     line-height: 1.75rem;
   }
 }
+
 @media (min-width: 768px) {
 
   .md\:mr-5 {
@@ -1507,6 +1519,7 @@ html{
     padding-top: 6rem;
   }
 }
+
 @media (min-width: 1024px) {
 
   .lg\:mx-20 {
@@ -1546,6 +1559,7 @@ html{
     line-height: 2.5rem;
   }
 }
+
 @media (min-width: 1280px) {
 
   .xl\:px-36 {
