--- a/app.css
+++ b/app.css
@@ -529,7 +529,7 @@ html{
         -o-object-fit: cover;
            object-fit: cover;
         height: 100vh;
-        min-height: 51rem;
+        /* min-height: 51rem; */
     }
 .container{
         font-family: 'CenturyGothic';
@@ -640,6 +640,14 @@ html{
 ::-webkit-scrollbar-thumb:hover {
         background: #718096;
     }
+.loading-page {
+  display: flex;
+  height: 100vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+        /* min-height: 51rem; */
+}
 .self-title{
         font-family: 'ADELIA';
     }
@@ -682,7 +690,7 @@ html{
   color: rgb(255 255 255 / var(--tw-text-opacity));
         background-attachment: fixed;
         height: 100vh;
-        min-height: 51rem;
+        /* min-height: 51rem; */
         position: relative;
         z-index: 1;
         background-repeat: no-repeat;
@@ -787,7 +795,7 @@ html{
      object-position: top;
 }
 .others{
-        min-height: 51rem;
+        /* min-height: 51rem; */
         position: relative;
         padding-left: 2.5rem;
         padding-right: 2.5rem;
@@ -915,6 +923,7 @@ html{
         }
     }
 @media (max-width: 768px) {
+        
         .sub-title{    
             left: 42%;
             top: 39rem;
@@ -1031,6 +1040,9 @@ html{
 .mb-2 {
   margin-bottom: 0.5rem;
 }
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -1058,9 +1070,6 @@ html{
 .mt-8 {
   margin-top: 2rem;
 }
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
 .block {
   display: block;
 }
@@ -1087,9 +1096,6 @@ html{
 }
 .h-full {
   height: 100%;
-}
-.h-screen {
-  height: 100vh;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -1321,7 +1327,6 @@ html{
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-
 @media (min-width: 768px) {
     
     .md\:duration-2{
@@ -1331,7 +1336,6 @@ html{
         animation-duration: 3s !important;
     }
 }
-
 @media (min-width: 1024px) {
     .lg\:fade-left.active {
         animation: fade-left 1s ease-in;
@@ -1340,7 +1344,6 @@ html{
         animation: fade-right 1s ease-in;
     }
 }
-
 @media (prefers-color-scheme: dark) {
 
   .dark\:border-gray-700 {
@@ -1373,7 +1376,6 @@ html{
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 }
-
 @media (min-width: 424px) {
 
   .xs\:mx-5 {
@@ -1390,7 +1392,6 @@ html{
          column-gap: 5rem;
   }
 }
-
 @media (min-width: 640px) {
 
   .sm\:mx-10 {
@@ -1479,7 +1480,6 @@ html{
     line-height: 1.75rem;
   }
 }
-
 @media (min-width: 768px) {
 
   .md\:mr-5 {
@@ -1519,7 +1519,6 @@ html{
     padding-top: 6rem;
   }
 }
-
 @media (min-width: 1024px) {
 
   .lg\:mx-20 {
@@ -1559,7 +1558,6 @@ html{
     line-height: 2.5rem;
   }
 }
-
 @media (min-width: 1280px) {
 
   .xl\:px-36 {
