--- a/app.css
+++ b/app.css
@@ -1121,6 +1121,9 @@ html{
 .w-full {
   width: 100%;
 }
+.w-40 {
+  width: 10rem;
+}
 .max-w-6xl {
   max-width: 72rem;
 }
@@ -1133,6 +1136,25 @@ html{
 }
 .animate-ping {
   animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+@keyframes bounce {
+
+  0%, 100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8,0,1,1);
+  }
+
+  50% {
+    transform: translateY(0);
+    animation-timing-function: cubic-bezier(0,0,0.2,1);
+  }
+
+  0%,100% {
+    transform: translateY(-30%);
+  }
+}
+.animate-bounce {
+  animation: bounce 1s infinite;
 }
 .cursor-pointer {
   cursor: pointer;
@@ -1179,6 +1201,15 @@ html{
 .rounded-xl {
   border-radius: 0.75rem;
 }
+.rounded {
+  border-radius: 0.25rem;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+.rounded-full {
+  border-radius: 9999px;
+}
 .border-t {
   border-top-width: 1px;
 }
@@ -1196,6 +1227,10 @@ html{
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-brand {
+  --tw-bg-opacity: 1;
+  background-color: rgb(246 161 146 / var(--tw-bg-opacity));
 }
 .object-center {
   -o-object-position: center;
@@ -1234,6 +1269,14 @@ html{
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 .pt-10 {
   padding-top: 2.5rem;
@@ -1327,6 +1370,7 @@ html{
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
 @media (min-width: 768px) {
     
     .md\:duration-2{
@@ -1336,6 +1380,7 @@ html{
         animation-duration: 3s !important;
     }
 }
+
 @media (min-width: 1024px) {
     .lg\:fade-left.active {
         animation: fade-left 1s ease-in;
@@ -1344,6 +1389,7 @@ html{
         animation: fade-right 1s ease-in;
     }
 }
+
 @media (prefers-color-scheme: dark) {
 
   .dark\:border-gray-700 {
@@ -1376,6 +1422,7 @@ html{
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 }
+
 @media (min-width: 424px) {
 
   .xs\:mx-5 {
@@ -1392,6 +1439,7 @@ html{
          column-gap: 5rem;
   }
 }
+
 @media (min-width: 640px) {
 
   .sm\:mx-10 {
@@ -1480,6 +1528,7 @@ html{
     line-height: 1.75rem;
   }
 }
+
 @media (min-width: 768px) {
 
   .md\:mr-5 {
@@ -1519,6 +1568,7 @@ html{
     padding-top: 6rem;
   }
 }
+
 @media (min-width: 1024px) {
 
   .lg\:mx-20 {
@@ -1558,6 +1608,7 @@ html{
     line-height: 2.5rem;
   }
 }
+
 @media (min-width: 1280px) {
 
   .xl\:px-36 {
