--- a/app.css
+++ b/app.css
@@ -538,17 +538,20 @@ html{
         margin-right: auto;
         max-width: 1536px;
     }
-.title{
+.title {
+  position: absolute;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+        white-space: nowrap;
         font-family: 'ADELIA';
-        position: absolute;
         left: 34%;
         top: 33rem;
-        color: white;
         transform: translate(-50px, -50px);
         font-size: 4rem;
         text-shadow: 0 0 black;
-    }
+}
 .sub-title{
+        white-space: nowrap;
         position: absolute;
         font-weight: bolder;
         left: 49%;
@@ -647,6 +650,34 @@ html{
   align-items: center;
   justify-content: center;
         /* min-height: 51rem; */
+}
+#popping-heart {
+  position: absolute;
+  display: inline-flex;
+  height: 100%;
+  width: 100%;
+}
+@keyframes ping {
+
+  75%, 100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+#popping-heart {
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  opacity: 0.75;
+}
+@media (min-width: 1024px) {
+
+  #popping-heart {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
 }
 .self-title{
         font-family: 'ADELIA';
@@ -955,19 +986,20 @@ html{
 @media (max-width: 425px) {
         .title{
             font-size: 1.6rem;
-            left: 29%;
+            left: 31%;
         }
 
         .sub-title{
-            left: 37%;
+            left: 39%;
             top: 37rem;
             font-size: 13px;
         }
 
         .heart{
-            top: 35rem;
+            top: 36rem;
             font-size: 1rem;
-            left: 44%;
+            left: 49%;
+
         }
 
         .time-container{
@@ -978,14 +1010,29 @@ html{
         .timer{
             font-size: 2rem;
         }
+    }
+@media (max-width: 375px) {
+        .title{
+            left: 28%;
+        }
+    }
+@media (max-width: 320px) {
         .title{
             font-size: 1.3rem;
+            left: 34%;
         }
 
         .sub-title{
-            left: 36%;
+            left: 41%;
             top: 36.4rem;
             font-size: 11px;
+        }
+
+        .heart{
+            top: 35rem;
+            font-size: 1rem;
+            left: 50%;
+
         }
     }
 .fixed {
@@ -1040,9 +1087,6 @@ html{
 .mb-2 {
   margin-bottom: 0.5rem;
 }
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -1076,6 +1120,9 @@ html{
 .flex {
   display: flex;
 }
+.inline-flex {
+  display: inline-flex;
+}
 .grid {
   display: grid;
 }
@@ -1084,6 +1131,9 @@ html{
 }
 .h-16 {
   height: 4rem;
+}
+.h-3 {
+  height: 0.75rem;
 }
 .h-5 {
   height: 1.25rem;
@@ -1103,6 +1153,9 @@ html{
 .w-28 {
   width: 7rem;
 }
+.w-3 {
+  width: 0.75rem;
+}
 .w-5 {
   width: 1.25rem;
 }
@@ -1121,21 +1174,8 @@ html{
 .w-full {
   width: 100%;
 }
-.w-40 {
-  width: 10rem;
-}
 .max-w-6xl {
   max-width: 72rem;
-}
-@keyframes ping {
-
-  75%, 100% {
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-.animate-ping {
-  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
 }
 @keyframes bounce {
 
@@ -1198,17 +1238,11 @@ html{
 .overflow-hidden {
   overflow: hidden;
 }
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-.rounded {
-  border-radius: 0.25rem;
-}
-.rounded-lg {
-  border-radius: 0.5rem;
-}
 .rounded-full {
   border-radius: 9999px;
+}
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 .border-t {
   border-top-width: 1px;
@@ -1228,10 +1262,6 @@ html{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-brand {
-  --tw-bg-opacity: 1;
-  background-color: rgb(246 161 146 / var(--tw-bg-opacity));
-}
 .object-center {
   -o-object-position: center;
      object-position: center;
@@ -1246,6 +1276,10 @@ html{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -1258,6 +1292,10 @@ html{
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
 .py-20 {
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -1269,14 +1307,6 @@ html{
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 .pt-10 {
   padding-top: 2.5rem;
