--- a/app.css
+++ b/app.css
@@ -531,6 +531,17 @@ html{
         height: 100vh;
         /* min-height: 51rem; */
     }
+#banner {
+  position: relative;
+  text-align: center;
+}
+.banner-title {
+  position: absolute;
+  left: 0px;
+  right: 0px;
+        top: 50%;
+        margin: 0 auto;
+}
 .container{
         font-family: 'CenturyGothic';
         position: relative;
@@ -539,32 +550,21 @@ html{
         max-width: 1536px;
     }
 .title {
-  position: absolute;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
         white-space: nowrap;
         font-family: 'ADELIA';
-        left: 34%;
-        top: 33rem;
-        transform: translate(-50px, -50px);
         font-size: 4rem;
-        text-shadow: 0 0 black;
+        text-shadow: 0 1px 1px black;
+        margin-bottom: 3.2rem;
 }
 .sub-title{
         white-space: nowrap;
-        position: absolute;
         font-weight: bolder;
-        left: 49%;
-        top: 42rem;
         color: white;
-        transform: translate(-50px, -50px);
         font-size: 1rem;
-        text-shadow: 0 0 black;
-    }
-.heart{
-        left: 53%;
-        top: 42rem;
-        position: absolute;
+        text-shadow: 1px 1px 3px black;
+        margin-bottom: 1.5rem;
     }
 @keyframes bounce {
 
@@ -696,6 +696,7 @@ html{
   position: absolute;
   right: 0px;
   bottom: 0px;
+  left: 0px;
   font-size: 1.875rem;
   line-height: 2.25rem;
   --tw-text-opacity: 1;
@@ -711,24 +712,40 @@ html{
 .flower-arc{
         text-shadow: 0 0 white;
         font-family: 'ADELIA';
-        left: 33%;
-        bottom: 0;
+        margin: 0 auto;
         top: 42%;
+        text-shadow: 0 0 5px white;
     }
+#back-to-top {
+  position: fixed;
+  --tw-bg-opacity: 1;
+  background-color: rgb(246 161 146 / var(--tw-bg-opacity));
+  text-align: center;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+        border-radius: 50%;
+        right: 3rem;
+        bottom: 3rem;
+        font-size: 1.2rem;
+        z-index: 99999;
+        width: 2.5rem;
+        height: 2.5rem;
+        line-height: 2.3rem;
+}
 .savethedate-container {
   text-align: center;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
         background-attachment: fixed;
         height: 100vh;
-        /* min-height: 51rem; */
+        min-height: 51rem;
         position: relative;
         z-index: 1;
         background-repeat: no-repeat;
         background-size: cover;
         -o-object-position: center;
            object-position: center;
-        opacity: 0.75;
+        opacity: 0.80;
         text-shadow: 0 0 black;
 }
 .time-container{
@@ -946,19 +963,13 @@ html{
         .title{
             font-size: 5vw;
         }
-        .sub-title{
-            top: 40rem;
-        }
-        .heart{
-            top: 39rem;
-        }
     }
 @media (max-width: 768px) {
-        
-        .sub-title{    
-            left: 42%;
-            top: 39rem;
+
+        .title{
+            margin-bottom: 2rem;
         }
+        
         .main-image{
             width: 22rem;
             height: 22rem;
@@ -986,20 +997,14 @@ html{
 @media (max-width: 425px) {
         .title{
             font-size: 1.6rem;
-            left: 31%;
         }
 
         .sub-title{
-            left: 39%;
-            top: 37rem;
             font-size: 13px;
         }
 
         .heart{
-            top: 36rem;
             font-size: 1rem;
-            left: 49%;
-
         }
 
         .time-container{
@@ -1010,29 +1015,27 @@ html{
         .timer{
             font-size: 2rem;
         }
-    }
-@media (max-width: 375px) {
-        .title{
-            left: 28%;
+
+        #back-to-top{
+            right: 0.5rem;
+            bottom: 1rem;
+            font-size: 1rem;
+            width: 2rem;
+            height: 2rem;
+            line-height: 1.8rem;
         }
     }
 @media (max-width: 320px) {
         .title{
             font-size: 1.3rem;
-            left: 34%;
         }
 
         .sub-title{
-            left: 41%;
-            top: 36.4rem;
             font-size: 11px;
         }
 
         .heart{
-            top: 35rem;
             font-size: 1rem;
-            left: 50%;
-
         }
     }
 .fixed {
@@ -1113,6 +1116,12 @@ html{
 }
 .mt-8 {
   margin-top: 2rem;
+}
+.mt-1 {
+  margin-top: 0.25rem;
+}
+.mr-5 {
+  margin-right: 1.25rem;
 }
 .block {
   display: block;
@@ -1202,6 +1211,9 @@ html{
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
+.flex-col {
+  flex-direction: column;
+}
 .flex-wrap {
   flex-wrap: wrap;
 }
@@ -1226,6 +1238,9 @@ html{
 .self-center {
   align-self: center;
 }
+.justify-self-end {
+  justify-self: end;
+}
 .justify-self-center {
   justify-self: center;
 }
@@ -1237,6 +1252,9 @@ html{
 }
 .rounded-xl {
   border-radius: 0.75rem;
+}
+.border {
+  border-width: 1px;
 }
 .border-t {
   border-top-width: 1px;
@@ -1302,6 +1320,10 @@ html{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
 .pt-10 {
   padding-top: 2.5rem;
 }
@@ -1311,8 +1333,17 @@ html{
 .pt-8 {
   padding-top: 2rem;
 }
+.pt-16 {
+  padding-top: 4rem;
+}
+.pr-40 {
+  padding-right: 10rem;
+}
 .text-center {
   text-align: center;
+}
+.text-right {
+  text-align: right;
 }
 .text-2xl {
   font-size: 1.5rem;
@@ -1354,6 +1385,12 @@ html{
 .leading-7 {
   line-height: 1.75rem;
 }
+.leading-10 {
+  line-height: 2.5rem;
+}
+.tracking-wider {
+  letter-spacing: 0.05em;
+}
 .text-brand {
   --tw-text-opacity: 1;
   color: rgb(246 161 146 / var(--tw-text-opacity));
@@ -1394,6 +1431,7 @@ html{
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
 @media (min-width: 768px) {
     
     .md\:duration-2{
@@ -1403,6 +1441,7 @@ html{
         animation-duration: 3s !important;
     }
 }
+
 @media (min-width: 1024px) {
     .lg\:fade-left.active {
         animation: fade-left 1s ease-in;
@@ -1411,6 +1450,7 @@ html{
         animation: fade-right 1s ease-in;
     }
 }
+
 @media (prefers-color-scheme: dark) {
 
   .dark\:border-gray-700 {
@@ -1443,6 +1483,7 @@ html{
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 }
+
 @media (min-width: 424px) {
 
   .xs\:mx-5 {
@@ -1459,6 +1500,7 @@ html{
          column-gap: 5rem;
   }
 }
+
 @media (min-width: 640px) {
 
   .sm\:mx-10 {
@@ -1546,7 +1588,13 @@ html{
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
 }
+
 @media (min-width: 768px) {
 
   .md\:mr-5 {
@@ -1586,6 +1634,7 @@ html{
     padding-top: 6rem;
   }
 }
+
 @media (min-width: 1024px) {
 
   .lg\:mx-20 {
@@ -1625,6 +1674,7 @@ html{
     line-height: 2.5rem;
   }
 }
+
 @media (min-width: 1280px) {
 
   .xl\:px-36 {
