--- a/app.css
+++ b/app.css
@@ -1067,6 +1067,25 @@ html{
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
+.btn {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+  cursor: pointer;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(246 161 146 / var(--tw-bg-opacity));
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.btn:hover{
+        opacity: 0.7;
+    }
 @keyframes fade-bottom {
         0% {
             transform: translateY(50px);
@@ -1341,9 +1360,6 @@ html{
 .animate-bounce {
   animation: bounce 1s infinite;
 }
-.cursor-pointer {
-  cursor: pointer;
-}
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -1386,9 +1402,6 @@ html{
 .overflow-hidden {
   overflow: hidden;
 }
-.rounded-full {
-  border-radius: 9999px;
-}
 .rounded-xl {
   border-radius: 0.75rem;
 }
@@ -1430,10 +1443,6 @@ html{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -1449,10 +1458,6 @@ html{
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
-}
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 .py-20 {
   padding-top: 5rem;
@@ -1589,9 +1594,6 @@ html{
     .lg\:fade-right.active {
         animation: fade-right 1s ease-in;
     }
-}
-.hover\:underline:hover {
-  text-decoration-line: underline;
 }
 @media (prefers-color-scheme: dark) {
 
